manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vulnz
  namespace: ns-aks-soadoc-monitoring
  annotations:
    meta.helm.sh/release-name: poc-soadoc-ge-ui
    meta.helm.sh/release-namespace: ns-aks-soadoc-monitoring
  labels:
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    app: poc-soadoc-ge-ui
  ports:
    - port: 80
